Port task asset helpers to Java 8